--- a/main.html
+++ b/main.html
@@ -10,17 +10,42 @@
 	<script>
 		function secondHighest(arr) {
 			//Write your code here
-			
+			if(arr.length === 1 || arr.length === 0){
+				return -Infinity
+				break;
+			}
+			elseif{
+					for(let i = 0; i < arr.length; i++){
+						if(arr[i] != arr[0]){
+							return -Infinity
+						}
+					}
+			}
+			else{
+				let max = 0;
+				let secondMax = 0;
+			for(let i = 0; i < arr.length; i++){
+				if(arr[i] > max){
+					max = arr[i]
+				}
+				for(let j = 0; j < arr.length; j++){
+					if(arr[j] < secondMax && arr[j] != max){
+						secondMax = arr[j]
+					}
+				}
+			}
+		  }
+			return secondMax;
 		}
 
-		function Main() {
-			var n = prompt("Enter the number of elements");
-			var arr = [];
-			for (var i = 0; i < n; i++) {
-				arr[i] = prompt("Enter element " + (i+1));
-			}
-			alert(secondHighest(arr));
-		}
+		// function Main() {
+		// 	var n = prompt("Enter the number of elements");
+		// 	var arr = [];
+		// 	for (var i = 0; i < n; i++) {
+		// 		arr[i] = prompt("Enter element " + (i+1));
+		// 	}
+		// 	alert(secondHighest(arr)); 
+		// }
 		Main();
 	</script>
 
