--- a/main.html
+++ b/main.html
@@ -38,14 +38,14 @@
 			return secondMax;
 		}
 
-		// function Main() {
-		// 	var n = prompt("Enter the number of elements");
-		// 	var arr = [];
-		// 	for (var i = 0; i < n; i++) {
-		// 		arr[i] = prompt("Enter element " + (i+1));
-		// 	}
-		// 	alert(secondHighest(arr)); 
-		// }
+		function Main() {
+			var n = prompt("Enter the number of elements");
+			var arr = [];
+			for (var i = 0; i < n; i++) {
+				arr[i] = prompt("Enter element " + (i+1));
+			}
+			alert(secondHighest(arr)); 
+		}
 		Main();
 	</script>
 
