--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 			//Write your code here
 			if(arr.length === 1 || arr.length === 0){
 				return -Infinity
-				break;
+				// break;
 			}
 			elseif{
 					for(let i = 0; i < arr.length; i++){
