--- a/main.html
+++ b/main.html
@@ -10,43 +10,32 @@
 	<script>
 		function secondHighest(arr) {
 			//Write your code here
-			if(arr.length === 1 || arr.length === 0){
-				return -Infinity
-				// break;
-			}
-			elseif{
-					for(let i = 0; i < arr.length; i++){
-						if(arr[i] != arr[0]){
-							return -Infinity
-						}
-					}
-			}
-			else{
-				let max = 0;
-				let secondMax = 0;
+			let max = -Infinity
+			let secondMax = -Infinity
 			for(let i = 0; i < arr.length; i++){
-				if(arr[i] > max){
-					max = arr[i]
-				}
-				for(let j = 0; j < arr.length; j++){
-					if(arr[j] < secondMax && arr[j] != max){
-						secondMax = arr[j]
-					}
-				}
+				  if(arr[i] > max){
+					max = arr[i] 
+			  }
 			}
-		  }
+			for(let i = 0; i < arr.length; i++){
+				if(arr[i] > secondMax && arr[i] != max){
+					secondMax = arr[i]
+				}
+			} 
 			return secondMax;
 		}
-
-		function Main() {
+  //     let newArr = [-1, -2, -3, -4, -5];
+		// alert(secondHighest(newArr));
+		
+		function Main() { 
 			var n = prompt("Enter the number of elements");
 			var arr = [];
 			for (var i = 0; i < n; i++) {
-				arr[i] = prompt("Enter element " + (i+1));
+				arr[i] = Number(prompt("Enter element " + (i+1)));
 			}
-			alert(secondHighest(arr)); 
-		}
-		Main();
+			alert(secondHighest(arr));     
+		} 
+		Main(); 
 	</script>
 
     <script type="text/javascript" src="./script.js">
